# shuttle-gate

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  shuttle-gate  test
docs/: architecture.md  configuration.md  development.md  quick-start.md  security.md  troubleshooting.md
src/shuttle_gate/: __init__.py  __main__.py  claim.py  cli.py  compose.py  config.py  errors.py  files.py  host.py  keys.py  launch.py  nft_tproxy.py  render.py  runner.py  runtime.py  sshuttle_entry.py  sshuttle_method_shim.py  state.py
tests/integration/: __init__.py  test_kernel.py
tests/unit/: __init__.py  conftest.py  fakes.py  test_claim.py  test_cli.py  test_compose.py  test_config.py  test_dependencies.py  test_errors.py  test_files.py  test_host.py  test_keys.py  test_launch.py  test_launcher.py  test_nft_tproxy.py  test_render.py  test_runner.py  test_runtime.py  test_sshuttle_entry.py  test_state.py
