[project]
name = "shuttle-gate"
version = "1.0.0"
description = "A clean-host WireGuard-to-SSH gateway"
requires-python = ">=3.14,<3.15"
dependencies = [
    "pydantic>=2.12,<3",
    "PyYAML>=6.0.2,<7",
    "sshuttle==1.3.2",
    "typer>=0.21,<1",
]

[dependency-groups]
dev = [
    "mypy>=1.19,<2",
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "ruff>=0.14,<1",
    "types-PyYAML>=6.0.12,<7",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ASYNC", "B", "E4", "E7", "E9", "F", "I", "RUF", "S", "SIM", "UP"]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"shuttle-gate" = ["S603"]
"test" = ["S603"]
"src/shuttle_gate/nft_tproxy.py" = ["S603", "S607"]
"src/shuttle_gate/runner.py" = ["S603"]
"src/shuttle_gate/runtime.py" = ["S603"]
"tests/**/*.py" = ["S101", "S104", "S108", "S603"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
testpaths = ["tests"]
markers = [
    "integration: requires Docker and privileged dual-stack networking",
]

[tool.coverage.run]
branch = true
source = ["shuttle_gate"]
omit = [
    "src/shuttle_gate/__main__.py",
    "src/shuttle_gate/sshuttle_method_shim.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
